# excel_to_markdown

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.steering/20260320-Markdown出力とCLI/: design.md  requirements.md  tasklist.md
.steering/20260320-add-coverage-tests/: design.md  requirements.md  tasklist.md
.steering/20260320-remaining-features/: design.md  requirements.md  tasklist.md
.steering/20260320-変換パイプライン基盤/: design.md  requirements.md  tasklist.md
.steering/20260320-構造検出/: design.md  requirements.md  tasklist.md
.steering/20260321-web-gui/: design.md  requirements.md  tasklist.md
.steering/20260406-offline-wheelhouse/: design.md  requirements.md  tasklist.md
.steering/20260407-combined-markdown-mermaid/: tasklist.md
.steering/20260407-excel-diagram-to-mermaid/: design.md  requirements.md  tasklist.md
.steering/20260408-swimlane-subgraph/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: initial-requirements.md
docs/refs/: python-logic-deep-dive.md  python-project-overview.md
excel_to_markdown/: __init__.py  __main__.py  cli.py  models.py
samples/: make_samples.py  基本設計書（DB設計）.xls  機能要件定義書.xlsx  詳細設計メモ_在庫照会.xls  議事録_システム開発定例.xlsx
tests/: conftest.py  test_cell_grid.py  test_cli.py  test_cli_diagram.py  test_diagram_extractor.py  test_drawing_extractor.py  test_integration.py  test_markdown_renderer.py  test_merge_resolver.py  test_mermaid_renderer.py  test_structure_detector.py  test_table_detector.py  test_web_app.py  test_xls_reader.py  test_xlsx_reader.py
(+29 files in other folders)
