[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-to-markdown"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
xls = ["xlrd>=2.0.0,<3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
excel-to-markdown = "excel_to_markdown.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=excel_to_markdown --cov-report=term-missing"
